// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner should correct render 1`] = `
<div
  className="pdp--banner"
>
  <i
    className="icon -inherit md hydrated -large"
    style={
      Object {
        "height": "90%",
      }
    }
  >
    <svg
      height="64"
      viewBox="0 0 64 64"
      width="64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <clipPath
          id="clip-Redundancy_icon"
        >
          <rect
            height="64"
            width="64"
          />
        </clipPath>
      </defs>
      <g
        clipPath="url(#clip-Redundancy_icon)"
        data-name="Redundancy icon"
        id="Redundancy_icon"
      >
        <g
          data-name="Orange Background"
          id="Orange_Background"
          transform="translate(-80.032 -64.904)"
        >
          <g
            data-name="Group 7"
            id="Group_7"
            transform="translate(86.032 66.979)"
          >
            <g
              data-name="Group 6"
              id="Group_6"
              transform="translate(0 0)"
            >
              <g
                data-name="Group 5"
                id="Group_5"
              >
                <g
                  data-name="Group 2"
                  id="Group_2"
                >
                  <g
                    data-name="Group 1"
                    id="Group_1"
                  >
                    <path
                      d="M113.329,127.7c4.778-2.273,24.063-12.466,25.019-29.358l-.49-19.45a2.6,2.6,0,0,0-2.188-2.5c-4.447-.7-14.863-2.817-21.692-7.9a2.6,2.6,0,0,0-2.886-.135c-3.636,2.173-13.11,7.4-21.788,8.455a2.593,2.593,0,0,0-2.272,2.578V97.618s-.59,19.585,24.177,30.133A2.582,2.582,0,0,0,113.329,127.7Z"
                      data-name="Path 1"
                      fill="#fff"
                      id="Path_1"
                      transform="translate(-86.804 -67.76)"
                    />
                    <path
                      d="M111.442,127.4a2.791,2.791,0,0,1-1.094-.223c-12.859-5.477-18.785-13.428-21.492-19.133a27.182,27.182,0,0,1-2.823-11.215V78.614a2.822,2.822,0,0,1,2.472-2.8c8.622-1.052,18.047-6.242,21.7-8.425a2.818,2.818,0,0,1,3.138.147c6.834,5.086,17.376,7.189,21.592,7.857a2.824,2.824,0,0,1,2.379,2.72l.49,19.45c-.41,7.26-4.162,14.1-11.152,20.336a62.132,62.132,0,0,1-14,9.232h0A2.824,2.824,0,0,1,111.442,127.4Zm.226-59.969a2.4,2.4,0,0,0-1.232.342c-3.677,2.2-13.169,7.423-21.877,8.485a2.367,2.367,0,0,0-2.072,2.352V96.837a26.732,26.732,0,0,0,2.79,11.037c2.675,5.627,8.533,13.472,21.249,18.887a2.359,2.359,0,0,0,1.934-.043,61.651,61.651,0,0,0,13.889-9.161c6.9-6.157,10.6-12.887,11-20l-.491-19.431a2.37,2.37,0,0,0-2-2.282c-4.248-.673-14.876-2.795-21.792-7.941A2.344,2.344,0,0,0,111.668,67.434Z"
                      data-name="Path 2"
                      fill="#444"
                      id="Path_2"
                      transform="translate(-86.032 -66.979)"
                    />
                  </g>
                </g>
                <g
                  data-name="Group 4"
                  id="Group_4"
                  transform="translate(2.228 2.309)"
                >
                  <g
                    data-name="Group 3"
                    id="Group_3"
                  >
                    <path
                      d="M120.09,132.717c4.405-2.115,22.186-11.6,23.067-27.321l-.452-18.1a2.41,2.41,0,0,0-2.017-2.327c-4.1-.656-13.7-2.622-20-7.351a2.381,2.381,0,0,0-2.661-.125c-3.352,2.022-12.087,6.884-20.089,7.869a2.406,2.406,0,0,0-2.095,2.4v16.959s-.544,18.227,22.291,28.043A2.361,2.361,0,0,0,120.09,132.717Z"
                      data-name="Path 3"
                      fill="#fff"
                      id="Path_3"
                      transform="translate(-95.842 -77.144)"
                    />
                    <path
                      d="M119.269,77.6a1.892,1.892,0,0,1,1.145.381c6.42,4.822,16.266,6.807,20.2,7.436a1.955,1.955,0,0,1,1.635,1.89l.452,18.083c-.373,6.551-3.758,12.752-10.062,18.432a56.508,56.508,0,0,1-12.748,8.487,1.933,1.933,0,0,1-.832.19,1.881,1.881,0,0,1-.747-.154,42.33,42.33,0,0,1-12.954-8.406,31.267,31.267,0,0,1-6.5-9.027A24.875,24.875,0,0,1,96.3,104.731V87.758a1.952,1.952,0,0,1,1.7-1.948c8.076-.994,16.864-5.877,20.268-7.931a1.953,1.953,0,0,1,1.008-.281m0-.454a2.4,2.4,0,0,0-1.243.347c-3.352,2.022-12.087,6.884-20.089,7.869a2.406,2.406,0,0,0-2.095,2.4v16.959s-.544,18.227,22.291,28.043a2.345,2.345,0,0,0,.927.191,2.374,2.374,0,0,0,1.028-.235c4.405-2.115,22.186-11.6,23.067-27.321l-.452-18.1a2.41,2.41,0,0,0-2.017-2.327c-4.1-.656-13.7-2.622-20-7.351a2.356,2.356,0,0,0-1.418-.472Z"
                      data-name="Path 4"
                      fill="#444"
                      id="Path_4"
                      transform="translate(-95.842 -77.144)"
                    />
                  </g>
                </g>
                <path
                  d="M125.176,137.271a.546.546,0,0,1-.216-.044c-21.352-9.179-21.221-25.648-21.2-26.345V93.876a.608.608,0,0,1,.518-.616c8.329-1.025,17.318-6.015,20.8-8.113a.612.612,0,0,1,.315-.088.561.561,0,0,1,.339.111c6.661,5,16.762,7.044,20.8,7.689a.611.611,0,0,1,.5.6l.451,18.027c-.886,14.84-18.517,24.036-22.047,25.731A.586.586,0,0,1,125.176,137.271Z"
                  data-name="Path 5"
                  fill="#eb6209"
                  id="Path_5"
                  opacity="0.4"
                  transform="translate(-99.729 -80.953)"
                />
              </g>
            </g>
            <path
              d="M268.868,260.19l.66-.768.359.615-.9.834Z"
              data-name="Path 6"
              fill="#fff"
              id="Path_6"
              transform="translate(-227.341 -215.713)"
            />
            <path
              d="M128.016,263.474l.865,1.071-.54.452Z"
              data-name="Path 7"
              fill="#fff"
              id="Path_7"
              transform="translate(-118.48 -218.844)"
            />
          </g>
          <g
            data-name="Group 13"
            id="Group_13"
            transform="translate(99.414 82.375)"
          >
            <path
              d="M156.928,199.012l-.388,2.274-1.736,1.23,1.23,1.736-1.736,1.23,1.23,1.736-1.736,1.23,1.23,1.736-.253,1.483-2.314,1.64-1.64-2.314,2.159-12.654"
              data-name="Path 8"
              fill="#ced5da"
              id="Path_8"
              transform="translate(-149.483 -183.898)"
            />
            <path
              d="M198.3,156.907l5.944,8.39a2,2,0,0,0,2.817.481l4.918-3.485a2,2,0,0,0,.481-2.817l-7.264-10.192a2,2,0,0,0-2.817-.481l-3.645,2.583"
              data-name="Path 9"
              fill="#fff"
              id="Path_9"
              transform="translate(-186.18 -145.321)"
            />
            <path
              d="M230.523,168.71l4.918-3.485a2,2,0,0,0,.481-2.817l-7.264-10.192"
              data-name="Path 10"
              fill="#eb6209"
              id="Path_10"
              opacity="0.4"
              transform="translate(-209.646 -148.252)"
            />
            <g
              data-name="Group 8"
              id="Group_8"
              transform="translate(1.092 2.875)"
            >
              <path
                d="M151.585,213.492l-1.826-2.576,2.175-12.746.448.076-2.143,12.561,1.454,2.052,2.052-1.454.221-1.3-1.307-1.845,1.736-1.23-1.23-1.736,1.736-1.23-1.23-1.736,1.844-1.307.372-2.181.448.076-.4,2.367-1.627,1.153,1.23,1.736-1.736,1.23,1.23,1.736-1.736,1.23L154.446,210l-.285,1.668Z"
                data-name="Path 11"
                fill="#444"
                id="Path_11"
                transform="translate(-149.759 -186.643)"
              />
              <path
                d="M205.249,165.612a2.229,2.229,0,0,1-1.825-.958l-5.944-8.39.371-.263,5.944,8.39a1.775,1.775,0,0,0,2.5.427l4.918-3.485a1.775,1.775,0,0,0,.427-2.5l-7.264-10.191a1.77,1.77,0,0,0-2.5-.427L198.23,150.8l-.263-.371,3.645-2.583a2.225,2.225,0,0,1,3.134.535l7.264,10.191a2.225,2.225,0,0,1-.534,3.135l-4.918,3.485A2.259,2.259,0,0,1,205.249,165.612Z"
                data-name="Path 12"
                fill="#444"
                id="Path_12"
                transform="translate(-186.641 -147.421)"
              />
              <circle
                cx="1.115"
                cy="1.115"
                data-name="Ellipse 1"
                fill="#eb6209"
                id="Ellipse_1"
                opacity="0.4"
                r="1.115"
                transform="translate(14.175 2.64)"
              />
              <path
                d="M213.282,159.5h0a.673.673,0,0,1,.112.01.661.661,0,0,1-.11,1.312.669.669,0,0,1-.112-.01.661.661,0,0,1,.11-1.312m0-.454a1.116,1.116,0,1,0,.189.016,1.115,1.115,0,0,0-.189-.016Z"
                data-name="Path 13"
                fill="#444"
                id="Path_13"
                transform="translate(-197.993 -156.405)"
              />
            </g>
            <g
              data-name="Group 9"
              id="Group_9"
              transform="translate(0 1.375)"
            >
              <path
                d="M151.535,141.885l3.608.615c4.152.708,3.174,6.442,2.743,8.963-.59,3.46-3.363,4.208-5.933,3.769l-1.532-.261c-2.611-.5-4.979-2.121-4.4-5.532.43-2.521,1.408-8.255,5.511-7.555l3.608.615"
                data-name="Path 14"
                fill="#fff"
                id="Path_14"
                transform="translate(-145.712 -141.598)"
              />
              <path
                d="M152.492,154.8a8.012,8.012,0,0,1-1.337-.117l-1.532-.261c-3.381-.643-5.092-2.808-4.583-5.794.433-2.537,1.448-8.479,5.773-7.74l3.608.616c1.895.323,3,1.668,3.277,4a19.052,19.052,0,0,1-.348,5.226,4.549,4.549,0,0,1-2.343,3.51A5.448,5.448,0,0,1,152.492,154.8Zm-2.368-13.518c-3.37,0-4.249,5.151-4.636,7.422-.667,3.907,2.726,4.988,4.216,5.271l1.528.261a5.777,5.777,0,0,0,3.566-.4,4.119,4.119,0,0,0,2.1-3.183,18.679,18.679,0,0,0,.345-5.1c-.256-2.136-1.206-3.315-2.9-3.605l-3.608-.616A3.637,3.637,0,0,0,150.124,141.278Z"
                data-name="Path 15"
                fill="#444"
                id="Path_15"
                transform="translate(-144.951 -140.821)"
              />
            </g>
            <g
              data-name="Group 12"
              id="Group_12"
              transform="translate(14.339 7.428)"
            >
              <g
                data-name="Group 10"
                id="Group_10"
                transform="translate(0 0)"
              >
                <rect
                  data-name="Rectangle 1"
                  fill="#fff"
                  height="9.437"
                  id="Rectangle_1"
                  rx="1.616"
                  transform="matrix(0.819, -0.573, 0.573, 0.819, 0, 3.306)"
                  width="5.767"
                />
                <path
                  d="M213.691,178.582a.481.481,0,0,1-.395-.2l-4.989-7.131a.481.481,0,0,1,.118-.669l4.124-2.885a.481.481,0,0,1,.669.118l4.989,7.131a.481.481,0,0,1-.118.669l-4.124,2.885A.477.477,0,0,1,213.691,178.582Zm-.867-10.749a.251.251,0,0,0-.144.046l-4.124,2.885a.254.254,0,0,0-.062.353l4.989,7.131a.253.253,0,0,0,.353.062l4.124-2.885a.254.254,0,0,0,.062-.353l-4.989-7.13a.25.25,0,0,0-.163-.1A.256.256,0,0,0,212.824,167.833Z"
                  data-name="Path 16"
                  fill="#444"
                  id="Path_16"
                  transform="translate(-208.19 -167.575)"
                />
              </g>
              <g
                data-name="Group 11"
                id="Group_11"
                transform="translate(0.435 0.429)"
              >
                <path
                  d="M215.469,179.868l4.123-2.885c.023-.016,0-.093-.053-.168l-4.731-6.761c-.106-.152-.252-.233-.325-.182l-3.944,2.759c-.073.051-.047.216.06.368l4.73,6.761C215.381,179.835,215.445,179.884,215.469,179.868Z"
                  data-name="Path 17"
                  fill="#ced5da"
                  id="Path_17"
                  transform="translate(-210.384 -169.743)"
                />
                <path
                  d="M215.072,179.6a.194.194,0,0,1-.118-.046.535.535,0,0,1-.1-.113l-4.731-6.761a.672.672,0,0,1-.116-.269.25.25,0,0,1,.085-.257l3.943-2.759a.25.25,0,0,1,.271.008.673.673,0,0,1,.213.2l4.731,6.761c.1.144.111.266.026.326l-4.124,2.885A.132.132,0,0,1,215.072,179.6Zm-.054-.21h0Zm-.868-9.8h0l-3.931,2.754a.463.463,0,0,0,.087.21l4.731,6.761a.352.352,0,0,0,.035.043l4.017-2.811a.359.359,0,0,0-.028-.047l-4.731-6.761A.326.326,0,0,0,214.15,169.584Z"
                  data-name="Path 18"
                  fill="#444"
                  id="Path_18"
                  transform="translate(-209.998 -169.357)"
                />
              </g>
              <path
                d="M224.794,184.251l-.6-.861a.534.534,0,0,0-.743-.131l-.714.5a.534.534,0,0,0-.132.743l.179.256a.154.154,0,0,0,.253-.177l-.179-.256a.225.225,0,0,1,.055-.313l.714-.5a.225.225,0,0,1,.313.055l.6.858-1.31.917a.451.451,0,0,0-.111.627l.68.971a.451.451,0,0,0,.628.111l1.538-1.076a.452.452,0,0,0,.11-.628l-.68-.971A.45.45,0,0,0,224.794,184.251Zm-.133,1.33.214.305a.05.05,0,0,1-.012.069l-.081.057a.049.049,0,0,1-.068-.012l-.213-.3a.2.2,0,1,1,.161-.113Z"
                data-name="Path 19"
                fill="#444"
                id="Path_19"
                transform="translate(-219.231 -179.599)"
              />
            </g>
            <path
              d="M172.338,150.105c1.848,1.754,1.182,5.66.854,7.58-.553,3.242-3.151,3.943-5.56,3.532l-1.436-.245"
              data-name="Path 20"
              fill="#eb6209"
              id="Path_20"
              opacity="0.4"
              transform="translate(-161.372 -146.621)"
            />
            <path
              d="M185.693,140.707l-.446-.087a4.542,4.542,0,0,0-3.587-5.319,4.623,4.623,0,0,0-5.368,3.577l-.446-.087a5.082,5.082,0,0,1,5.9-3.936A5,5,0,0,1,185.693,140.707Z"
              data-name="Path 21"
              fill="#444"
              id="Path_21"
              transform="translate(-168.829 -134.765)"
            />
            <path
              d="M172.661,152.627l-1.008-.172a.853.853,0,0,1-.637-1.024h0a.853.853,0,0,1,.941-.755l1.008.172a.852.852,0,0,1,.637,1.024h0A.885.885,0,0,1,172.661,152.627Z"
              data-name="Path 22"
              fill="#eb6209"
              id="Path_22"
              opacity="0.4"
              transform="translate(-165.085 -147.054)"
            />
            <path
              d="M171.2,151.063h0a.461.461,0,0,1,.079.007l1.137.194a.443.443,0,0,1,.366.517.484.484,0,0,1-.453.372.371.371,0,0,1-.064-.005l-1.137-.194a.449.449,0,0,1,.072-.891m0-.454a.9.9,0,0,0-.148,1.792l1.137.194a.819.819,0,0,0,.14.012.94.94,0,0,0,.9-.75.9.9,0,0,0-.738-1.042l-1.137-.194a.922.922,0,0,0-.155-.013Z"
              data-name="Path 23"
              fill="#444"
              id="Path_23"
              transform="translate(-164.546 -147.01)"
            />
          </g>
        </g>
      </g>
    </svg>
  </i>
  <div>
    <p
      className="heading -white -large"
    >
      Free Redundancy & Life Event Cover
    </p>
    <span
      className="text -pr-100 -small -white"
    >
      If the worst happens, return your vehicle, no charge.
    </span>
    <a
      className="link -white -small"
      data-testid="link"
      href="/redundancy-and-life-event-cover.html"
      onClick={[Function]}
    >
      <b>
        Find Out More
      </b>
    </a>
  </div>
</div>
`;

exports[`Banner should correct render with text for vans 1`] = `
<div
  className="pdp--banner"
>
  <i
    className="icon -inherit md hydrated -large"
    style={
      Object {
        "height": "90%",
      }
    }
  >
    <svg
      height="64"
      viewBox="0 0 64 64"
      width="64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <clipPath
          id="clip-Redundancy_icon"
        >
          <rect
            height="64"
            width="64"
          />
        </clipPath>
      </defs>
      <g
        clipPath="url(#clip-Redundancy_icon)"
        data-name="Redundancy icon"
        id="Redundancy_icon"
      >
        <g
          data-name="Orange Background"
          id="Orange_Background"
          transform="translate(-80.032 -64.904)"
        >
          <g
            data-name="Group 7"
            id="Group_7"
            transform="translate(86.032 66.979)"
          >
            <g
              data-name="Group 6"
              id="Group_6"
              transform="translate(0 0)"
            >
              <g
                data-name="Group 5"
                id="Group_5"
              >
                <g
                  data-name="Group 2"
                  id="Group_2"
                >
                  <g
                    data-name="Group 1"
                    id="Group_1"
                  >
                    <path
                      d="M113.329,127.7c4.778-2.273,24.063-12.466,25.019-29.358l-.49-19.45a2.6,2.6,0,0,0-2.188-2.5c-4.447-.7-14.863-2.817-21.692-7.9a2.6,2.6,0,0,0-2.886-.135c-3.636,2.173-13.11,7.4-21.788,8.455a2.593,2.593,0,0,0-2.272,2.578V97.618s-.59,19.585,24.177,30.133A2.582,2.582,0,0,0,113.329,127.7Z"
                      data-name="Path 1"
                      fill="#fff"
                      id="Path_1"
                      transform="translate(-86.804 -67.76)"
                    />
                    <path
                      d="M111.442,127.4a2.791,2.791,0,0,1-1.094-.223c-12.859-5.477-18.785-13.428-21.492-19.133a27.182,27.182,0,0,1-2.823-11.215V78.614a2.822,2.822,0,0,1,2.472-2.8c8.622-1.052,18.047-6.242,21.7-8.425a2.818,2.818,0,0,1,3.138.147c6.834,5.086,17.376,7.189,21.592,7.857a2.824,2.824,0,0,1,2.379,2.72l.49,19.45c-.41,7.26-4.162,14.1-11.152,20.336a62.132,62.132,0,0,1-14,9.232h0A2.824,2.824,0,0,1,111.442,127.4Zm.226-59.969a2.4,2.4,0,0,0-1.232.342c-3.677,2.2-13.169,7.423-21.877,8.485a2.367,2.367,0,0,0-2.072,2.352V96.837a26.732,26.732,0,0,0,2.79,11.037c2.675,5.627,8.533,13.472,21.249,18.887a2.359,2.359,0,0,0,1.934-.043,61.651,61.651,0,0,0,13.889-9.161c6.9-6.157,10.6-12.887,11-20l-.491-19.431a2.37,2.37,0,0,0-2-2.282c-4.248-.673-14.876-2.795-21.792-7.941A2.344,2.344,0,0,0,111.668,67.434Z"
                      data-name="Path 2"
                      fill="#444"
                      id="Path_2"
                      transform="translate(-86.032 -66.979)"
                    />
                  </g>
                </g>
                <g
                  data-name="Group 4"
                  id="Group_4"
                  transform="translate(2.228 2.309)"
                >
                  <g
                    data-name="Group 3"
                    id="Group_3"
                  >
                    <path
                      d="M120.09,132.717c4.405-2.115,22.186-11.6,23.067-27.321l-.452-18.1a2.41,2.41,0,0,0-2.017-2.327c-4.1-.656-13.7-2.622-20-7.351a2.381,2.381,0,0,0-2.661-.125c-3.352,2.022-12.087,6.884-20.089,7.869a2.406,2.406,0,0,0-2.095,2.4v16.959s-.544,18.227,22.291,28.043A2.361,2.361,0,0,0,120.09,132.717Z"
                      data-name="Path 3"
                      fill="#fff"
                      id="Path_3"
                      transform="translate(-95.842 -77.144)"
                    />
                    <path
                      d="M119.269,77.6a1.892,1.892,0,0,1,1.145.381c6.42,4.822,16.266,6.807,20.2,7.436a1.955,1.955,0,0,1,1.635,1.89l.452,18.083c-.373,6.551-3.758,12.752-10.062,18.432a56.508,56.508,0,0,1-12.748,8.487,1.933,1.933,0,0,1-.832.19,1.881,1.881,0,0,1-.747-.154,42.33,42.33,0,0,1-12.954-8.406,31.267,31.267,0,0,1-6.5-9.027A24.875,24.875,0,0,1,96.3,104.731V87.758a1.952,1.952,0,0,1,1.7-1.948c8.076-.994,16.864-5.877,20.268-7.931a1.953,1.953,0,0,1,1.008-.281m0-.454a2.4,2.4,0,0,0-1.243.347c-3.352,2.022-12.087,6.884-20.089,7.869a2.406,2.406,0,0,0-2.095,2.4v16.959s-.544,18.227,22.291,28.043a2.345,2.345,0,0,0,.927.191,2.374,2.374,0,0,0,1.028-.235c4.405-2.115,22.186-11.6,23.067-27.321l-.452-18.1a2.41,2.41,0,0,0-2.017-2.327c-4.1-.656-13.7-2.622-20-7.351a2.356,2.356,0,0,0-1.418-.472Z"
                      data-name="Path 4"
                      fill="#444"
                      id="Path_4"
                      transform="translate(-95.842 -77.144)"
                    />
                  </g>
                </g>
                <path
                  d="M125.176,137.271a.546.546,0,0,1-.216-.044c-21.352-9.179-21.221-25.648-21.2-26.345V93.876a.608.608,0,0,1,.518-.616c8.329-1.025,17.318-6.015,20.8-8.113a.612.612,0,0,1,.315-.088.561.561,0,0,1,.339.111c6.661,5,16.762,7.044,20.8,7.689a.611.611,0,0,1,.5.6l.451,18.027c-.886,14.84-18.517,24.036-22.047,25.731A.586.586,0,0,1,125.176,137.271Z"
                  data-name="Path 5"
                  fill="#eb6209"
                  id="Path_5"
                  opacity="0.4"
                  transform="translate(-99.729 -80.953)"
                />
              </g>
            </g>
            <path
              d="M268.868,260.19l.66-.768.359.615-.9.834Z"
              data-name="Path 6"
              fill="#fff"
              id="Path_6"
              transform="translate(-227.341 -215.713)"
            />
            <path
              d="M128.016,263.474l.865,1.071-.54.452Z"
              data-name="Path 7"
              fill="#fff"
              id="Path_7"
              transform="translate(-118.48 -218.844)"
            />
          </g>
          <g
            data-name="Group 13"
            id="Group_13"
            transform="translate(99.414 82.375)"
          >
            <path
              d="M156.928,199.012l-.388,2.274-1.736,1.23,1.23,1.736-1.736,1.23,1.23,1.736-1.736,1.23,1.23,1.736-.253,1.483-2.314,1.64-1.64-2.314,2.159-12.654"
              data-name="Path 8"
              fill="#ced5da"
              id="Path_8"
              transform="translate(-149.483 -183.898)"
            />
            <path
              d="M198.3,156.907l5.944,8.39a2,2,0,0,0,2.817.481l4.918-3.485a2,2,0,0,0,.481-2.817l-7.264-10.192a2,2,0,0,0-2.817-.481l-3.645,2.583"
              data-name="Path 9"
              fill="#fff"
              id="Path_9"
              transform="translate(-186.18 -145.321)"
            />
            <path
              d="M230.523,168.71l4.918-3.485a2,2,0,0,0,.481-2.817l-7.264-10.192"
              data-name="Path 10"
              fill="#eb6209"
              id="Path_10"
              opacity="0.4"
              transform="translate(-209.646 -148.252)"
            />
            <g
              data-name="Group 8"
              id="Group_8"
              transform="translate(1.092 2.875)"
            >
              <path
                d="M151.585,213.492l-1.826-2.576,2.175-12.746.448.076-2.143,12.561,1.454,2.052,2.052-1.454.221-1.3-1.307-1.845,1.736-1.23-1.23-1.736,1.736-1.23-1.23-1.736,1.844-1.307.372-2.181.448.076-.4,2.367-1.627,1.153,1.23,1.736-1.736,1.23,1.23,1.736-1.736,1.23L154.446,210l-.285,1.668Z"
                data-name="Path 11"
                fill="#444"
                id="Path_11"
                transform="translate(-149.759 -186.643)"
              />
              <path
                d="M205.249,165.612a2.229,2.229,0,0,1-1.825-.958l-5.944-8.39.371-.263,5.944,8.39a1.775,1.775,0,0,0,2.5.427l4.918-3.485a1.775,1.775,0,0,0,.427-2.5l-7.264-10.191a1.77,1.77,0,0,0-2.5-.427L198.23,150.8l-.263-.371,3.645-2.583a2.225,2.225,0,0,1,3.134.535l7.264,10.191a2.225,2.225,0,0,1-.534,3.135l-4.918,3.485A2.259,2.259,0,0,1,205.249,165.612Z"
                data-name="Path 12"
                fill="#444"
                id="Path_12"
                transform="translate(-186.641 -147.421)"
              />
              <circle
                cx="1.115"
                cy="1.115"
                data-name="Ellipse 1"
                fill="#eb6209"
                id="Ellipse_1"
                opacity="0.4"
                r="1.115"
                transform="translate(14.175 2.64)"
              />
              <path
                d="M213.282,159.5h0a.673.673,0,0,1,.112.01.661.661,0,0,1-.11,1.312.669.669,0,0,1-.112-.01.661.661,0,0,1,.11-1.312m0-.454a1.116,1.116,0,1,0,.189.016,1.115,1.115,0,0,0-.189-.016Z"
                data-name="Path 13"
                fill="#444"
                id="Path_13"
                transform="translate(-197.993 -156.405)"
              />
            </g>
            <g
              data-name="Group 9"
              id="Group_9"
              transform="translate(0 1.375)"
            >
              <path
                d="M151.535,141.885l3.608.615c4.152.708,3.174,6.442,2.743,8.963-.59,3.46-3.363,4.208-5.933,3.769l-1.532-.261c-2.611-.5-4.979-2.121-4.4-5.532.43-2.521,1.408-8.255,5.511-7.555l3.608.615"
                data-name="Path 14"
                fill="#fff"
                id="Path_14"
                transform="translate(-145.712 -141.598)"
              />
              <path
                d="M152.492,154.8a8.012,8.012,0,0,1-1.337-.117l-1.532-.261c-3.381-.643-5.092-2.808-4.583-5.794.433-2.537,1.448-8.479,5.773-7.74l3.608.616c1.895.323,3,1.668,3.277,4a19.052,19.052,0,0,1-.348,5.226,4.549,4.549,0,0,1-2.343,3.51A5.448,5.448,0,0,1,152.492,154.8Zm-2.368-13.518c-3.37,0-4.249,5.151-4.636,7.422-.667,3.907,2.726,4.988,4.216,5.271l1.528.261a5.777,5.777,0,0,0,3.566-.4,4.119,4.119,0,0,0,2.1-3.183,18.679,18.679,0,0,0,.345-5.1c-.256-2.136-1.206-3.315-2.9-3.605l-3.608-.616A3.637,3.637,0,0,0,150.124,141.278Z"
                data-name="Path 15"
                fill="#444"
                id="Path_15"
                transform="translate(-144.951 -140.821)"
              />
            </g>
            <g
              data-name="Group 12"
              id="Group_12"
              transform="translate(14.339 7.428)"
            >
              <g
                data-name="Group 10"
                id="Group_10"
                transform="translate(0 0)"
              >
                <rect
                  data-name="Rectangle 1"
                  fill="#fff"
                  height="9.437"
                  id="Rectangle_1"
                  rx="1.616"
                  transform="matrix(0.819, -0.573, 0.573, 0.819, 0, 3.306)"
                  width="5.767"
                />
                <path
                  d="M213.691,178.582a.481.481,0,0,1-.395-.2l-4.989-7.131a.481.481,0,0,1,.118-.669l4.124-2.885a.481.481,0,0,1,.669.118l4.989,7.131a.481.481,0,0,1-.118.669l-4.124,2.885A.477.477,0,0,1,213.691,178.582Zm-.867-10.749a.251.251,0,0,0-.144.046l-4.124,2.885a.254.254,0,0,0-.062.353l4.989,7.131a.253.253,0,0,0,.353.062l4.124-2.885a.254.254,0,0,0,.062-.353l-4.989-7.13a.25.25,0,0,0-.163-.1A.256.256,0,0,0,212.824,167.833Z"
                  data-name="Path 16"
                  fill="#444"
                  id="Path_16"
                  transform="translate(-208.19 -167.575)"
                />
              </g>
              <g
                data-name="Group 11"
                id="Group_11"
                transform="translate(0.435 0.429)"
              >
                <path
                  d="M215.469,179.868l4.123-2.885c.023-.016,0-.093-.053-.168l-4.731-6.761c-.106-.152-.252-.233-.325-.182l-3.944,2.759c-.073.051-.047.216.06.368l4.73,6.761C215.381,179.835,215.445,179.884,215.469,179.868Z"
                  data-name="Path 17"
                  fill="#ced5da"
                  id="Path_17"
                  transform="translate(-210.384 -169.743)"
                />
                <path
                  d="M215.072,179.6a.194.194,0,0,1-.118-.046.535.535,0,0,1-.1-.113l-4.731-6.761a.672.672,0,0,1-.116-.269.25.25,0,0,1,.085-.257l3.943-2.759a.25.25,0,0,1,.271.008.673.673,0,0,1,.213.2l4.731,6.761c.1.144.111.266.026.326l-4.124,2.885A.132.132,0,0,1,215.072,179.6Zm-.054-.21h0Zm-.868-9.8h0l-3.931,2.754a.463.463,0,0,0,.087.21l4.731,6.761a.352.352,0,0,0,.035.043l4.017-2.811a.359.359,0,0,0-.028-.047l-4.731-6.761A.326.326,0,0,0,214.15,169.584Z"
                  data-name="Path 18"
                  fill="#444"
                  id="Path_18"
                  transform="translate(-209.998 -169.357)"
                />
              </g>
              <path
                d="M224.794,184.251l-.6-.861a.534.534,0,0,0-.743-.131l-.714.5a.534.534,0,0,0-.132.743l.179.256a.154.154,0,0,0,.253-.177l-.179-.256a.225.225,0,0,1,.055-.313l.714-.5a.225.225,0,0,1,.313.055l.6.858-1.31.917a.451.451,0,0,0-.111.627l.68.971a.451.451,0,0,0,.628.111l1.538-1.076a.452.452,0,0,0,.11-.628l-.68-.971A.45.45,0,0,0,224.794,184.251Zm-.133,1.33.214.305a.05.05,0,0,1-.012.069l-.081.057a.049.049,0,0,1-.068-.012l-.213-.3a.2.2,0,1,1,.161-.113Z"
                data-name="Path 19"
                fill="#444"
                id="Path_19"
                transform="translate(-219.231 -179.599)"
              />
            </g>
            <path
              d="M172.338,150.105c1.848,1.754,1.182,5.66.854,7.58-.553,3.242-3.151,3.943-5.56,3.532l-1.436-.245"
              data-name="Path 20"
              fill="#eb6209"
              id="Path_20"
              opacity="0.4"
              transform="translate(-161.372 -146.621)"
            />
            <path
              d="M185.693,140.707l-.446-.087a4.542,4.542,0,0,0-3.587-5.319,4.623,4.623,0,0,0-5.368,3.577l-.446-.087a5.082,5.082,0,0,1,5.9-3.936A5,5,0,0,1,185.693,140.707Z"
              data-name="Path 21"
              fill="#444"
              id="Path_21"
              transform="translate(-168.829 -134.765)"
            />
            <path
              d="M172.661,152.627l-1.008-.172a.853.853,0,0,1-.637-1.024h0a.853.853,0,0,1,.941-.755l1.008.172a.852.852,0,0,1,.637,1.024h0A.885.885,0,0,1,172.661,152.627Z"
              data-name="Path 22"
              fill="#eb6209"
              id="Path_22"
              opacity="0.4"
              transform="translate(-165.085 -147.054)"
            />
            <path
              d="M171.2,151.063h0a.461.461,0,0,1,.079.007l1.137.194a.443.443,0,0,1,.366.517.484.484,0,0,1-.453.372.371.371,0,0,1-.064-.005l-1.137-.194a.449.449,0,0,1,.072-.891m0-.454a.9.9,0,0,0-.148,1.792l1.137.194a.819.819,0,0,0,.14.012.94.94,0,0,0,.9-.75.9.9,0,0,0-.738-1.042l-1.137-.194a.922.922,0,0,0-.155-.013Z"
              data-name="Path 23"
              fill="#444"
              id="Path_23"
              transform="translate(-164.546 -147.01)"
            />
          </g>
        </g>
      </g>
    </svg>
  </i>
  <div>
    <p
      className="heading -white -large"
    >
      Free Loss Of Earnings & Life Event Cover
    </p>
    <span
      className="text -pr-100 -small -white"
    >
      If the worst happens, return your vehicle, no charge.
    </span>
    <a
      className="link -white -small"
      data-testid="link"
      href="/redundancy-and-life-event-cover.html"
      onClick={[Function]}
    >
      <b>
        Find Out More
      </b>
    </a>
  </div>
</div>
`;
